kubernetes/apps/immich/immich/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
spec:
  hostnames:
    - photos.rphilipsen.nl
  parentRefs:
    - name: agentgateway-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
